load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "adaptive",
    srcs = ["wave_sort.go"],
    importpath = "codelab/go/dsal/leetcode/adaptive",
    visibility = ["//visibility:public"],
)

go_test(
    name = "adaptive_test",
    srcs = ["wave_sort_test.go"],
    embed = [":adaptive"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
